# 117 run .java with mvn from PackageExploere, added dependency to JDT